# chemins_noirs

./: .dockerignore  .gitignore  2026-01-16-jselm-map-click.txt  AGENTS.md  Cargo.toml  DEPLOYMENT.md  DIAGNOSTIC_ROUTING_ISSUES.md  Dockerfile.build  ELM_MIGRATION_PLAN.md  ELM_POSTGRESQL_COMPLETE.md  IMPROVEMENTS_SUMMARY.md  MAPBOX_SETUP.md  MIGRATION_COMPLETE.md  MIGRATION_FIX.md  MIKADO_ELM_MIGRATION.md  MVU_COMPARISON.md  PERFORMANCE_OPTIMIZATIONS.md  POSTGRESQL_INTEGRATION_STATUS.md  POSTGRESQL_SUCCESS.md  QUICK_START.md  README.md  REGENERER_TILES.sh  ROUTING_FIX.md  SCRIPT_POSTGRESQL_UPDATE.md  SOLUTION_PERFORMANCE_ET_QUALITE.md  SUMMARY.md  TEST_WAYPOINTS_DEBUG.sh  TILES_SETUP.md  TROUBLESHOOTING.md  agentgit.md  build-docker.sh  deploy.sh  test_routing_fixed.sh  test_waypoints_simple.sh
.cargo/: audit.toml
.claude/: analyse.txt  codex_rust_prompts.txt  config.yaml
.claude/skills/: rust-skills
.github/workflows/: ci.yml  deploy.yml  release.yml  setup-vps.yml
backend/: 2026-01-11-rust-audit.txt  Cargo.toml  DATABASE_SETUP.md  INTEGRATION_POSTGRESQL.md  TESTING.md  backend.rs  install_sqlite3.sh  setup_database.sh
backend/benches/: graph_generation.rs
backend/data/: sample_graph.json
backend/migrations/: 20250128_create_saved_routes.sql
backend/proptest-regressions/: loops.txt
backend/src/: buildings.rs  database.rs  dem.rs  elevation.rs  engine.rs  error.rs  geo_utils.rs  gpx_export.rs  graph.rs  graph_refactored.rs  lib.rs  loops.rs  main.rs  models.rs  partial_graph.rs  poi.rs  routing.rs  saved_routes_handlers.rs  terrain.rs
backend/tests/: api_integration.rs  pbf_routing_regression.rs  route_api.rs
frontend/: 2025-11-16-do-i-need-pbftojsonsh-and-py-i-want-only-rus.txt  CAMERA_CONTROL.md  Cargo.toml  Trunk.toml  build.sh  cesium.js  dev.sh  index.html  map.js  mapbox3d.js  maplibre_map.js  package-lock.json  package.json.tmp  style.css  three3d.js  three3d_clean.js
frontend-elm/: .gitignore  2025-12-28-regarder-pour-transformer-le-frontend-en-un-front.txt  QUICKSTART.md  README.md  elm.json  index.html  package-lock.json  package.json  vite.config.js
frontend-elm/public/: elm.js  manifest.json  style.css  sw.js
frontend-elm/scripts/: gen_textures.py
frontend-elm/src/: Api.elm  Decoders.elm  Encoders.elm  GameEngine.elm  Main.elm  Ports.elm  TopoTile.elm  Types.elm  main.js  maplibre_map.js  terrain3d.js
frontend-elm/src/View/: Form.elm  Game.elm  Preview.elm  World3D.elm
frontend-elm/tests/: DecoderTests.elm  GameEngineTests.elm
frontend/src/: lib.rs
local-target/: .rustc_info.json
local-target/debug/.fingerprint/futures-core-7596b23e2b8e74c8/: output-lib-futures_core
local-target/debug/.fingerprint/itoa-f2b51776301c1a6f/: output-lib-itoa
local-target/debug/.fingerprint/libc-5a85b39b31218ab3/: build-script-build-script-build  build-script-build-script-build.json
scripts/: README.md  clean_backend_data.sh  clean_tiles.sh  generate_tiles.sh  run_backend_partial.sh  run_dev.sh  run_fullstack.sh  run_fullstack_elm.sh
shared/src/: lib.rs
(+7 files in other folders)
