[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gpx = "0.10"
base64 = "0.22"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
petgraph = "0.6"
geo-types = "0.7"
osmpbf = "0.3"
clap = { version = "4.5", features = ["derive"] }
shared = { path = "../shared" }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
hyper = "1"
[build]
target-dir = "target"
