[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gpx = "0.10"
base64 = "0.22"
thiserror = "2.0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
petgraph = "0.8.3"
geo-types = "0.7"
osmpbf = "0.3"
rayon = "1.10"
clap = { version = "4.5", features = ["derive"] }
shared = { path = "../shared" }
tower-http = { version = "0.6", features = ["cors"] }
proj = "0.27"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "json", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
hyper = "1"
tempfile = "3"
